--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 
         <label for="inputValues">Enter values (separated by a comma please):</label>
-        <input type="text" id="inputValues" placeholder="e.g., true, false, 0, hello">
+        <input type="text" id="inputValues" placeholder="e.g., true, false,">
         
         <button id="getTruthyValues">Get Truthy Values</button>
         <span id="result"></span>
